# pacific_hurricanes_1975_scraping

./: .gitignore  1975-pacific-hurrican-scraping.ipynb  Methodology.txt  README.md  gpt3.5-turbo.json  hurricanes_1975.csv  hurricanes_1975_gpt.csv  hurricanes_1975_llama.csv  llama2.json  main.py  pyproject.toml
