[tool.poetry]
name = "pacific-hurricane-scraping"
version = "0.1.0"
description = ""
authors = ["askador <fedosov0912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
gpt4all = "^2.8.2"
bs4 = "^0.0.2"
pandas = "^2.2.2"
transformers = "^4.44.2"
torch = "^2.4.1"
openai = "^1.46.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
